<resources>
    <string name="app_name">Distribuidora H yJ</string>
    <string name="txt_1">Ingrese codigo</string>
    <string name="txt_2">Ingrese descripción</string>
    <string name="txt_3">Ingrese precio</string>
    <string name="btnRegistrar">Ingrese producto</string>
    <string name="btnModificar">Modificar producto</string>
    <string name="btnBuscar">Buscar producto</string>
    <string name="btnEliminar">Eliminar producto</string>
    <string name="btnVer">Listado de Productos</string>
    <string name="txv">Listado de productos</string>
    <string name="btn6">Regresar</string>
    <string name="recycle">recycleId</string>
    <string name="txtCodigo">Codigo</string>
    <string name="salir">salir</string>
    <string name="btnConsumoApi">Consumir API</string>
    <string name="canbia">El producto ya existe, si desea agregarlo cambia el codigo</string>


    <string-array name="array_Producto">
        <item>Lateos</item>
        <item>Frios</item>
        <item>Liquidos</item>
        <item>Carnes</item>
    </string-array>

    <string-array name="array_Sede">
        <item>La salle</item>
        <item>El jardin</item>
        <item>Aranjuez</item>
        <item>Granizal</item>
        <item>Campo Valdez</item>

    </string-array>


</resources>
