<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Distri"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="#83B4B0"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_1"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:onClick="buscarMain"
            android:text="@string/btnBuscar"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_2"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_3"
            android:textSize="14sp"
            android:inputType="number"
            android:maxLength="11"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Disponible"
            android:textOn="No disponible"
            android:textOff="Disponible"/>

        <Spinner
            android:id="@+id/idSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnListar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="listar"
                android:text="@string/btnVer"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="agregar"
                android:text="@string/btnRegistrar"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="dialogoEliminar"
                android:text="@string/btnModificar"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="eliminar"
                android:text="@string/btnEliminar"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnConsumoApi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnConsumoApi"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSede"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingrese Sede"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>