<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/codigoLis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_1"
        android:inputType="number"
        android:maxLength="10"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/descripcionLis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_2"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/precioLis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_3"
        android:textSize="14sp"
        android:inputType="number"
        android:maxLength="11"/>

    <Switch
        android:id="@+id/switch1Lis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Disponible"/>


    <Spinner
        android:id="@+id/idSpinnerLis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_Producto"/>

    </LinearLayout>

</LinearLayout>